--- a/logoGen.html
+++ b/logoGen.html
@@ -44,7 +44,7 @@
         <input type="text" onkeyup="cForeground(this)" value="#000000">
         <div class="label">배경색</div>
         <input type="text" onkeyup="cBackground(this)" value="#FFFFFF">
-        *이미지를 우클릭하여 저장할 수 있습니다. 그림자 부분은 저장되지 않습니다.
+        *이미지를 우클릭하여 저장할 수 있습니다.<br>그림자 부분은 저장되지 않습니다.<br>모바일에선 작동하지 않습니다.
     </div>
     <div id="canvasBox"> <canvas id="canvasTag"> </canvas>
     </div>
